Updated app settings with PlaylistDiscoverAlbumOfLikedSongs

--- a/AutoPlaylistFromLikedSongs/appsettings.json
+++ b/AutoPlaylistFromLikedSongs/appsettings.json
@@ -1,7 +1,11 @@
 {
     "Spotify": {
-        "ClientId": "ClientID",
-        "ClientSecret": "ClientSecret"
+        "ClientId": "",
+        "ClientSecret": "",
+        "PlaylistByYear": true,
+        "PlaylistByGenre": true,
+        "PlaylistDiscoverAlbumOfLikedSongs": true,
+        "PlaylistDiscoverAlbumOfLikedSongsMinimumAlbumYear": 2021
     }
 
 }
