new app settings var for artist liked songs

--- a/AutoPlaylistFromLikedSongs/appsettings.json
+++ b/AutoPlaylistFromLikedSongs/appsettings.json
@@ -4,6 +4,8 @@
         "ClientSecret": "",
         "PlaylistByYear": true,
         "PlaylistByGenre": true,
+        "PlaylistByArtist": true,
+        "PlaylistByArtistMinimumLikedSongs": 25,
         "PlaylistDiscoverAlbumOfLikedSongs": true,
         "PlaylistDiscoverAlbumOfLikedSongsMinimumAlbumYear": 2021
     }
