--- a/AutoPlaylistFromLikedSongs/AutoPlaylistFromLikedSongs.csproj
+++ b/AutoPlaylistFromLikedSongs/AutoPlaylistFromLikedSongs.csproj
@@ -12,8 +12,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.*" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.*" />
-    <PackageReference Include="SpotifyAPI.Web" Version="6.*" />
-    <PackageReference Include="SpotifyAPI.Web.Auth" Version="6.*" />
+    <PackageReference Include="SpotifyAPI.Web" Version="7.1.1" />
+    <PackageReference Include="SpotifyAPI.Web.Auth" Version="7.1.1" />
   </ItemGroup>
 
 	<ItemGroup>
